# fastauth

./: README.md  pyproject.toml
examples/: add_middlewares_example.py  usage_example.py
fastapi_auth/: constants.py  depends.py
fastauth/: __init__.py  depends.py  middlewares.py  schemas.py
fastguard/: __init__.py  middlewares.py  schemas.py
